--- a/views/doctor.pug
+++ b/views/doctor.pug
@@ -6,6 +6,7 @@ html
    body
       a(class='button' href='/') Home
       h2=`Dr ${doctor.name}`
+      img(src=doctor.pic)
       div=`Location: ${doctor.location}`
       div=`Specialty: ${doctor.specialty}`
       h4 Similar Doctors
